--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<title>JS HomeWork</title>
-	<script defer src="main.js"></script>
+	<script defer src="leson2.js"></script>
 </head>
 <body>
-	<p>async - загружает скрипт асинхронно</p>
-	<p>defer - откладывает выполнение cкрипта до тех пор, пока вся страница не будет загружена</p>
+	
 </body>
 </html>
