--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>JS HomeWork</title>
-	<script defer src="leson2.js"></script>
+	<script defer src="lesson3.js"></script>
 </head>
 <body>
 	
