--- a/index.html
+++ b/index.html
@@ -3,9 +3,185 @@
 <head>
 	<meta charset="UTF-8">
 	<title>JS HomeWork</title>
-	<script defer src="lesson5.js"></script>
+	<link rel="stylesheet" href="css/lesson5.css">
+	
 </head>
 <body>
+	<!-- <div class="board">
+		<div class="block"></div>
+		<div class="block block_black"></div>
+		<div class="block"></div>
+		<div class="block block_black"></div>
+		<div class="block"></div>
+		<div class="block block_black"></div>
+		<div class="block"></div>
+		<div class="block block_black"></div>
+		<div class="block block_clrfix  block_black"></div>
+		<div class="block"></div>
+		<div class="block block_black"></div>
+		<div class="block"></div>
+		<div class="block block_black"></div>
+		<div class="block"></div>
+		<div class="block block_black"></div>
+		<div class="block"></div>
+		<div class="block block_clrfix"></div>
+		<div class="block block_black"></div>
+		<div class="block"></div>
+		<div class="block block_black"></div>
+		<div class="block"></div>
+		<div class="block block_black"></div>
+		<div class="block"></div>
+		<div class="block block_black"></div>
+		<div class="block block_clrfix block_black"></div>
+		<div class="block"></div>
+		<div class="block block_black"></div>
+		<div class="block"></div>
+		<div class="block block_black"></div>
+		<div class="block"></div>
+		<div class="block block_black"></div>
+		<div class="block"></div>
+		<div class="block block_clrfix"></div>
+		<div class="block block_black"></div>
+		<div class="block"></div>
+		<div class="block block_black"></div>
+		<div class="block"></div>
+		<div class="block block_black"></div>
+		<div class="block"></div>
+		<div class="block block_black"></div>
+		<div class="block block_clrfix block_black"></div>
+		<div class="block"></div>
+		<div class="block block_black"></div>
+		<div class="block"></div>
+		<div class="block block_black"></div>
+		<div class="block"></div>
+		<div class="block block_black"></div>
+		<div class="block"></div>
+		<div class="block block_clrfix"></div>
+		<div class="block block_black"></div>
+		<div class="block"></div>
+		<div class="block block_black"></div>
+		<div class="block"></div>
+		<div class="block block_black"></div>
+		<div class="block"></div>
+		<div class="block block_black"></div>
+		<div class="block block_clrfix block_black"></div>
+		<div class="block"></div>
+		<div class="block block_black"></div>
+		<div class="block"></div>
+		<div class="block block_black"></div>
+		<div class="block"></div>
+		<div class="block block_black"></div>
+		<div class="block"></div>
+	</div> -->
+
+	<!-- <table>
+		<tr>
+			<td>8</td>
+			<td></td>
+			<td class="black"></td>
+			<td></td>
+			<td class="black"></td>
+			<td></td>
+			<td class="black"></td>
+			<td></td>
+			<td class="black"></td>
+		</tr>
+		<tr>
+			<td>7</td>
+			<td class="black"></td>
+			<td></td>
+			<td class="black"></td>
+			<td></td>
+			<td class="black"></td>
+			<td></td>
+			<td class="black"></td>
+			<td></td>
+		</tr>
+		<tr>
+			<td>6</td>
+			<td></td>
+			<td class="black"></td>
+			<td></td>
+			<td class="black"></td>
+			<td></td>
+			<td class="black"></td>
+			<td></td>
+			<td class="black"></td>
+		</tr>
+		<tr>
+			<td>5</td>
+			<td class="black"></td>
+			<td></td>
+			<td class="black"></td>
+			<td></td>
+			<td class="black"></td>
+			<td></td>
+			<td class="black"></td>
+			<td></td>
+		</tr>
+		<tr>
+			<td>4</td>
+			<td></td>
+			<td class="black"></td>
+			<td></td>
+			<td class="black"></td>
+			<td></td>
+			<td class="black"></td>
+			<td></td>
+			<td class="black"></td>
+		</tr>
+		<tr>
+			<td>3</td>
+			<td class="black"></td>
+			<td></td>
+			<td class="black"></td>
+			<td></td>
+			<td class="black"></td>
+			<td></td>
+			<td class="black"></td>
+			<td></td>
+		</tr>
+		<tr>
+			<td>2</td>
+			<td></td>
+			<td class="black"></td>
+			<td></td>
+			<td class="black"></td>
+			<td></td>
+			<td class="black"></td>
+			<td></td>
+			<td class="black"></td>
+		</tr>
+		<tr>
+			<td>1</td>
+			<td class="black"></td>
+			<td></td>
+			<td class="black"></td>
+			<td></td>
+			<td class="black"></td>
+			<td></td>
+			<td class="black"></td>
+			<td></td>
+		</tr>
+		<tr>
+			<td></td>
+			<td>a</td>
+			<td>b</td>
+			<td>c</td>
+			<td>d</td>
+			<td>e</td>
+			<td>f</td>
+			<td>g</td>
+			<td>h</td>
+		</tr>
+	</table> -->
+
+	<div class="board" id="board">
+		
+	</div>
 	
+	
+
+	<script src="lesson5.js"></script>	
 </body>
 </html>
