--- a/lesson5.html
+++ b/lesson5.html
@@ -239,7 +239,8 @@ var product = [
     
     // <div class="card">
     //         <img src="https://i1.ytimg.com/sh/nFCxMKeqg8k/showposter.jpg" alt="" class="card__img">
-    //         <p class="card__title">25 $</p>
+    //         <p class="card__title">Рубашка мужская</p>
+    //         <p class="card__price">25 $</p>
     //         <a href="#" class="card__link">Buy</a>
     // </div>
     
